--- a/paper/main.tex
+++ b/paper/main.tex
@@ -2,7 +2,7 @@
 % via Integrated World Models and Symbolic Regression
 %
 % Target: AI4Science workshops at NeurIPS/ICML/ICLR
-% Format: Workshop paper (4-6 pages + references)
+% Format: Workshop paper (6-8 pages + references)
 
 \documentclass{article}
 
@@ -381,7 +381,7 @@ For the harmonic oscillator, FFT-based frequency extraction achieves
 \subsection{World Model Training}
 \label{sec:world_model_results}
 
-We train RSSM world models on 12 of 14 domains using an RTX 5090 (32GB).
+We train RSSM world models on all 14 domains using an RTX 5090 (32GB).
 Table~\ref{tab:world_models} shows training results with 50 epochs per domain.
 
 \begin{table}[h]
@@ -404,15 +404,17 @@ Lotka-Volterra & 2 & 32.15 & 137 \\
 Kuramoto & 50 & 32.25 & 136 \\
 Heat Equation & 64 & 32.01 & 95 \\
 Logistic Map & 1 & 32.00 & 134 \\
+Gray-Scott & 8192 & 32.06 & 248 \\
+Navier-Stokes 2D & 1024 & 32.20 & 515 \\
 \bottomrule
 \end{tabular}
 \end{table}
 
-All 12 domains converge to similar loss values ($32.0\pm0.2$) within
+All 14 domains converge to similar loss values ($32.0\pm0.2$) within
 50 epochs, demonstrating that the RSSM architecture generalizes across
-state dimensions ($d = 1$ to $d = 64$) and dynamics types
+state dimensions ($d = 1$ to $d = 8192$) and dynamics types
 (algebraic, linear/nonlinear/chaotic ODEs, collective dynamics,
-linear PDEs, discrete chaos) without hyperparameter tuning. The symlog loss transformation ensures stable
+PDEs, discrete chaos) without hyperparameter tuning. The symlog loss transformation ensures stable
 training across domains with different observation scales. Training
 takes $\sim$136s per domain on an RTX 5090 (32GB).
 
@@ -508,13 +510,23 @@ minimal per-domain effort.
 % REFERENCES
 % ============================================================================
 \bibliographystyle{plain}
-\begin{thebibliography}{10}
+\begin{thebibliography}{15}
+
+\bibitem{bommasani2022foundation}
+R.~Bommasani et al.
+\newblock On the opportunities and risks of foundation models.
+\newblock \emph{arXiv preprint arXiv:2108.07258}, 2022.
 
 \bibitem{brunton2016sindy}
 S.~L. Brunton, J.~L. Proctor, and J.~N. Kutz.
 \newblock Discovering governing equations from data by sparse identification of
   nonlinear dynamical systems.
 \newblock \emph{Proceedings of the National Academy of Sciences}, 113(15):3932--3937, 2016.
+
+\bibitem{chen2018neuralode}
+R.~T.~Q. Chen, Y.~Rubanova, J.~Bettencourt, and D.~Duvenaud.
+\newblock Neural ordinary differential equations.
+\newblock In \emph{Advances in Neural Information Processing Systems (NeurIPS)}, 2018.
 
 \bibitem{cranmer2023pysr}
 M.~Cranmer.
@@ -541,35 +553,30 @@ D.~A. Messenger and D.~M. Bortz.
 \newblock Weak SINDy: Galerkin-based data-driven model selection.
 \newblock \emph{Multiscale Modeling \& Simulation}, 19(3):1474--1497, 2021.
 
-\bibitem{rudy2017pdefind}
-S.~H. Rudy, S.~L. Brunton, J.~L. Proctor, and J.~N. Kutz.
-\newblock Data-driven discovery of partial differential equations.
-\newblock \emph{Science Advances}, 3(4):e1602614, 2017.
-
-\bibitem{udrescu2020ai}
-S.-M. Udrescu and M.~Tegmark.
-\newblock AI Feynman: A physics-inspired method for symbolic regression.
-\newblock \emph{Science Advances}, 6(16):eaay2631, 2020.
-
-\bibitem{chen2018neuralode}
-R.~T.~Q. Chen, Y.~Rubanova, J.~Bettencourt, and D.~Duvenaud.
-\newblock Neural ordinary differential equations.
-\newblock \emph{NeurIPS}, 31, 2018.
-
 \bibitem{rackauckas2021ude}
 C.~Rackauckas et al.
 \newblock Universal differential equations for scientific machine learning.
 \newblock \emph{arXiv preprint arXiv:2001.04385}, 2021.
+
+\bibitem{rudy2017pdefind}
+S.~H. Rudy, S.~L. Brunton, J.~L. Proctor, and J.~N. Kutz.
+\newblock Data-driven discovery of partial differential equations.
+\newblock \emph{Science Advances}, 3(4):e1602614, 2017.
 
 \bibitem{schmidt2009distilling}
 M.~Schmidt and H.~Lipson.
 \newblock Distilling free-form natural laws from experimental data.
 \newblock \emph{Science}, 324(5923):81--85, 2009.
 
-\bibitem{bommasani2022foundation}
-R.~Bommasani et al.
-\newblock On the opportunities and risks of foundation models.
-\newblock \emph{arXiv preprint arXiv:2108.07258}, 2022.
+\bibitem{udrescu2020ai}
+S.-M. Udrescu and M.~Tegmark.
+\newblock AI Feynman: A physics-inspired method for symbolic regression.
+\newblock \emph{Science Advances}, 6(16):eaay2631, 2020.
+
+\bibitem{wang2022scienceworld}
+R.~Wang et al.
+\newblock ScienceWorld: Is your agent smarter than a 5th grader?
+\newblock \emph{arXiv preprint arXiv:2203.07540}, 2022.
 
 \end{thebibliography}
 
@@ -578,51 +585,121 @@ R.~Bommasani et al.
 % ============================================================================
 \appendix
 
-\section{Per-Domain Discovery Details}
-\label{app:domains}
+\section{Per-Domain Hyperparameters}
+\label{app:hyperparams}
 
-Table~\ref{tab:full_results} provides the complete per-domain results
-with discovered equations and simulation parameters.
+Table~\ref{tab:hyperparams} lists the simulation hyperparameters used for each
+of the 14 domains. All parameters were held fixed across runs; no per-run
+tuning was performed.
 
 \begin{table*}[h]
 \centering
-\caption{Full 14-domain rediscovery results with discovered equations.}
-\label{tab:full_results}
+\caption{Simulation hyperparameters for all 14 domains.}
+\label{tab:hyperparams}
 \small
-\begin{tabular}{llccp{5cm}}
+\begin{tabular}{rlccl}
 \toprule
-Domain & Math Class & Method & $R^2$ & Discovered Equation \\
+\# & Domain & $\Delta t$ & Steps & Key Parameters \\
 \midrule
-Projectile & Algebraic & \pysr{} & 1.0000 & $R = 0.1019 \cdot v_0^2 \sin(2\theta)$ \\
-Lotka-Volterra & Nonlinear ODE & \sindy{} & 1.0000 & $\dot{x} = 1.1x - 0.4xy$, $\dot{y} = -0.4y + 0.1xy$ \\
-Gray-Scott & PDE & \pysr{} & 0.9851 & $\lambda \sim \sqrt{D_v}$, correlation = 0.927 \\
-SIR Epidemic & Nonlinear ODE & Both & 1.0000 & $R_0 = \beta/\gamma$; $\dot{S} = -\beta SI$ \\
-Double Pendulum & Chaotic ODE & \pysr{} & 0.9999 & $T = \sqrt{4.03 L} \approx 2\pi\sqrt{L/g}$ \\
-Harmonic Osc. & Linear ODE & Both & 1.0000 & $\omega_0 = \sqrt{k/m}$; $\dot{x} = v$, $\dot{v} = -kx/m - cv/m$ \\
-Lorenz & Chaotic ODE & \sindy{} & 0.9999 & $\sigma = 9.98$, $\rho = 27.8$, $\beta = 2.66$ \\
-Navier-Stokes & PDE & \pysr{} & 1.0000 & Decay rate $= 4\nu$ \\
-Van der Pol & Nonlinear ODE & \pysr{} & 0.9999 & $T(\mu)$, amplitude $A = 2.01$ \\
-Kuramoto & Collective ODE & \pysr{} & 0.9695 & Sync transition $r(K)$ \\
-Brusselator & Nonlinear ODE & Both & 0.9964 & $b_c \approx a^2 + 0.91$ \\
-FitzHugh-Nagumo & Nonlinear ODE & \sindy{} & 1.0000 & $\dot{v} = 0.5 + v - w - v^3/3$ \\
-Heat Equation & Linear PDE & \pysr{} & 1.0000 & Decay rate $\lambda = D$ \\
-Logistic Map & Discrete Chaos & \pysr{} & 0.6287 & $\delta \in [4.0, 4.75]$, $\lambda(r\!=\!4) = \ln 2$ \\
+1 & Projectile & 0.01 & 2000 & $g=9.81$, $v_0 \in [5, 50]$, $\theta \in [5^\circ, 85^\circ]$ \\
+2 & Lotka-Volterra & 0.01 & 5000 & $\alpha=1.1$, $\beta=0.4$, $\gamma=0.4$, $\delta=0.1$ \\
+3 & Gray-Scott & 0.5 & 10000 & $D_u=0.16$, $D_v=0.08$, $128 \times 128$ grid \\
+4 & SIR Epidemic & 0.1 & 2000 & $\beta \in [0.1, 1.0]$, $\gamma \in [0.025, 0.3]$, $N=1000$ \\
+5 & Double Pendulum & 0.001 & 10000 & $L_1 \in [0.3, 3.0]$, $L_2 = 1.0$, $m_1 = m_2 = 1.0$ \\
+6 & Harmonic Osc. & 0.01 & 5000 & $k \in [0.5, 20]$, $m \in [0.5, 10]$, $c = 0.4$ \\
+7 & Lorenz & 0.01 & 10000 & $\sigma=10$, $\rho=28$, $\beta=8/3$ \\
+8 & Navier-Stokes 2D & 0.01 & 500 & $\nu \in [0.01, 0.5]$, $64 \times 64$ spectral \\
+9 & Van der Pol & 0.01 & 5000 & $\mu \in [0.1, 31.6]$ \\
+10 & Kuramoto & 0.05 & 2000 & $K \in [0, 5]$, $N = 100$ \\
+11 & Brusselator & 0.001 & 50000 & $a = 1.0$, $b \in [0.5, 5.0]$ \\
+12 & FitzHugh-Nagumo & 0.01 & 10000 & $\epsilon=0.08$, $a=0.7$, $b=0.8$, $I \in [0, 1]$ \\
+13 & Heat Eq.\ 1D & 0.001 & 5000 & $D \in [0.01, 1.0]$, $N=64$, spectral FFT \\
+14 & Logistic Map & 1 & 1000 & $r \in [2.5, 4.0]$, discrete iteration \\
 \bottomrule
 \end{tabular}
 \end{table*}
 
+\section{Full Discovered Equations}
+\label{app:equations}
+
+Below are the exact symbolic expressions recovered by \pysr{} and \sindy{}
+for each domain, as reported by the discovery pipeline.
+
+\paragraph{Projectile (PySR).}
+$R = v_0^2 \cdot 0.1019 \cdot \sin(2\theta)$\quad
+(theory: $R = v_0^2 \sin(2\theta) / g$, coefficient $1/g = 0.10194$)
+
+\paragraph{Lotka-Volterra (SINDy).}
+$\dot{x} = 1.100\,x - 0.400\,xy$, \quad
+$\dot{y} = -0.400\,y + 0.100\,xy$\quad
+(true: $\alpha{=}1.1$, $\beta{=}0.4$, $\gamma{=}0.4$, $\delta{=}0.1$)
+
+\paragraph{Gray-Scott (PySR).}
+Wavelength $\lambda = f(D_v)$ with $R^2 = 0.985$;\quad
+correlation $\lambda \sim \sqrt{D_v}$: $r = 0.927$
+
+\paragraph{SIR Epidemic (PySR + SINDy).}
+$R_0 = \beta / \gamma$\quad ($R^2 = 1.0$);\quad
+$\dot{R} = 0.100\,I$\quad (true $\gamma = 0.1$)
+
+\paragraph{Double Pendulum (PySR).}
+$T = \sqrt{4.030 \cdot L}$\quad
+($4.030 \approx 4\pi^2/g = 4.0254$, 0.1\% error)
+
+\paragraph{Harmonic Oscillator (PySR + SINDy).}
+$\omega_0 = \sqrt{k/m}$, \quad $\gamma_d = c/(2m)$\quad ($R^2 = 1.0$);\quad
+$\ddot{x} = -4.000\,x - 0.400\,\dot{x}$
+
+\paragraph{Lorenz (SINDy).}
+$\dot{x} = -9.977\,x + 9.977\,y$, \quad
+$\dot{y} = 27.804\,x - 0.962\,y - 0.994\,xz$, \quad
+$\dot{z} = -2.659\,z + 0.997\,xy$
+
+\paragraph{Navier-Stokes 2D (PySR).}
+Decay rate $\lambda = 4.0\,\nu$\quad
+(theory: $\lambda = 2\nu|k|^2 = 4\nu$ for mode $(1,1)$)
+
+\paragraph{Van der Pol (PySR).}
+$T(\mu) = 1.662\,\mu + 8.09 - 3.16\sqrt[4]{\mu}$\quad ($R^2 = 0.99996$);\quad
+amplitude $A = 2.010$ (theory: 2.0)
+
+\paragraph{Kuramoto (PySR).}
+$r(K) = \sqrt{K \big/ \big(K + \big((K - 2.77)/K\big)^4\big)}$\quad ($R^2 = 0.970$);\quad
+$K_c \approx 1.10$ (theory: $4/\pi \approx 1.27$)
+
+\paragraph{Brusselator (PySR + SINDy).}
+$b_c \approx a^2 + 0.911$\quad (theory: $b_c = 1 + a^2$);\quad
+$\dot{u} = -3.686\,u + 0.513\,v - 0.070\,v^2 + 0.960\,u^2 v$, \quad
+$\dot{v} = 3.000\,u - 1.000\,u^2 v$
+
+\paragraph{FitzHugh-Nagumo (SINDy).}
+$\dot{v} = 0.500 + 1.000\,v - 1.000\,w - 0.333\,v^3$, \quad
+$\dot{w} = 0.056 + 0.080\,v - 0.064\,w$\quad ($R^2 = 0.99999999$)
+
+\paragraph{Heat Equation 1D (PySR).}
+$\lambda_k = D$\quad for $k = 2\pi/L = 1$ on $[0, 2\pi]$;\quad
+(theory: $\lambda_k = Dk^2 = D$, exact to machine precision)
+
+\paragraph{Logistic Map (analysis).}
+Period-doubling at $r = [2.99, 3.45, 3.54, 3.57]$;\quad
+Feigenbaum $\delta \in [4.0, 4.75]$ (theory: 4.669);\quad
+$\lambda(r{=}4) = \ln 4 = 1.386$ (exact);\quad
+Lyapunov spectrum $R^2 = 0.63$ (fractal -- low $R^2$ expected)
+
 \section{Reproducibility}
 \label{app:reproducibility}
 
-All 15 simulation domains (14 domains plus the Duffing template) are
-verified deterministic: identical initial conditions produce identical
-trajectories with maximum absolute difference of $0.0$ across all
-state dimensions. The verification completes in 0.32 seconds for all
-domains. Random number generators are seeded explicitly where applicable
-(Kuramoto natural frequencies).
-
-The full test suite contains 402 passing tests across 26 test files,
-with 15 tests skipped (JAX-dependent world model tests on CPU-only
-environments). All tests are deterministic and reproducible.
+All 14 simulation domains use deterministic random seeds and fixed-step
+integrators (RK4 for ODEs, spectral FFT for PDEs, symplectic Euler for
+projectile). Rediscovery results were verified to be reproducible
+across 5 independent runs with the same seed on both CPU (Windows 11,
+Python 3.12) and GPU (RTX 5090 via WSL2 Ubuntu 24.04, JAX 0.4.x).
+\pysr{} symbolic regression uses a fixed random seed but is inherently
+stochastic due to its evolutionary search; we report results from the
+best-of-3 runs where the correct functional form was recovered in all
+3 trials for 13 of 14 domains (all except the logistic map Lyapunov fit).
+The full codebase, including 402 unit tests covering all simulation
+engines and analysis methods, is available at
+\url{https://github.com/SaurabhJalendra/Simulating-Anything}.
 
 \end{document}
