--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -17,12 +17,12 @@
 8 & Navier-Stokes & PDE & PySR & \textbf{1.0000} & $4=2|k|^2$ for $(1,1)$ \\
 9 & Van der Pol & Nonlinear ODE & PySR & \textbf{1.0000} & $A=2.01$ \\
 10 & Kuramoto & Collective & PySR & 0.9695 & Sync order param. \\
-11 & Brusselator & Nonlinear ODE & PySR+SINDy & 0.9964 & Hopf + ODE \\
+11 & Brusselator & Nonlinear ODE & PySR+SINDy & \textbf{0.9999} & Hopf + ODE \\
 12 & FitzHugh-Nagumo & Nonlinear ODE & SINDy & \textbf{1.0000} & Exact coefficients \\
 13 & Heat Eq. 1D & Linear PDE & PySR & \textbf{1.0000} & Spectral exact \\
 14 & Logistic Map & Discrete & PySR & 0.6287 & Fractal spectrum \\
 \midrule
-\multicolumn{6}{l}{Mean R$^2$ = 0.9700 | 10/14 domains with R$^2 \geq 0.999$} \\
+\multicolumn{6}{l}{Mean R$^2$ = 0.970 | 11/14 domains with R$^2 \geq 0.999$} \\
 \bottomrule
 \end{tabular}
 \end{table*}
